platform/infrastructure/controllers/vault/network-policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: vault-baseline
  namespace: vault-secrets
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: vault
  ingress:
  - fromEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: external-secrets
  egress:
  - toEntities: [kube-apiserver, host, cluster]
